# ai-news-review

./: .cz.toml  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README-CN.md  README.md  prek.toml
backend/: .env.example  alembic.ini  prek.toml  pyproject.toml
backend/.agents/skills/crawl4ai/scripts/: basic_crawler.py  batch_crawler.py  extraction_pipeline.py
backend/.agents/skills/crawl4ai/tests/: test_advanced_patterns.py  test_basic_crawling.py  test_data_extraction.py  test_markdown_generation.py
backend/alembic/: env.py
backend/alembic/versions/: 4f6f7a8b9c10_add_news_article_table.py  8d3b2f1e9a4c_add_pending_email_to_user.py  c2f9008cfbf1_create_user_table.py
backend/scripts/: clean_pyc.sh
backend/src/app/: main.py
backend/src/app/alembic/: env.py
backend/src/app/alembic/versions/: 3bd8990f211f_create_users_table.py
backend/src/app/api/: router.py
backend/src/app/auth/: backend.py  dependencies.py  fastapi_users.py  manager.py
backend/src/app/core/: config.py  database.py  db.py  exceptions.py  logging.py
backend/src/app/crawlers/: __init__.py  extractors.py  news_crawler.py  schemas.py
backend/src/app/ingestion/: embedder.py  indexer.py  loader.py  pipeline.py  splitter.py
backend/src/app/llm/: client.py
backend/src/app/llm/chains/: article_summary.py  news_summary.py
backend/src/app/llm/prompts/: article_summary.py  news_summary.py
backend/src/app/models/: __init__.py  accesstoken.py  news_article.py  user.py
backend/src/app/repositories/: news.py
backend/src/app/retrieval/: filters.py  retriever.py
backend/src/app/schemas/: admin.py  news.py  pipeline.py  user.py
backend/src/app/services/: mail.py  news_service.py  pipeline_rate_limit.py  rag_service.py  rate_limit.py
backend/src/app/tasks/: __init__.py  celery_app.py  crawl_jobs.py  ingest_jobs.py  mail_jobs.py  rag_jobs.py
backend/src/app/vectorstore/: base.py  chroma.py  factory.py
backend/tests/: conftest.py  test_app.py  test_auth_api.py  test_config.py
backend/tests/api/: test_admin_api.py  test_auth_api.py  test_news_api.py
backend/tests/crawler/: test_news_crawler.py
backend/tests/services/: test_news_ingestion.py  test_news_rag.py
frontend/: .env.example  .gitignore  (+10 more)
(+90 files in other folders)
